[build-system]
requires = ["setuptools>=67.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsmplot"
authors = [
  { name="Tianzhu Qiao", email="tq@feiyilin.com" },
]
license = {file = "LICENSE"}
description='bsmplot is a tool to visualize time series'
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
          'wxpython>=4.2.1', 'matplotlib>=3.8.1', 'numpy', 'scipy', 'click>=8.1', 'pandas',
          'pyulog', 'propgrid>=0.1.5', 'mplpanel>=0.1.8', 'aui2>=0.1.6', 'zmq',
          'bsmutility>=0.2.3','ply', 'charset_normalizer', 'h5py'
      ]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "bsmplot.__version__"}

[project.urls]
"Homepage" = "https://github.com/tianzhuqiao/bsmplot"

[project.gui-scripts]
bsmplot = "bsmplot.__main__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
bsmplot = ["ico/*.icns", "ico/*.ico", "ico/*.svg"]

[options]
include_package_data = true
