[build-system]
requires = ["setuptools>=67.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsmplot"
authors = [
  { name="Tianzhu Qiao", email="tq@feiyilin.com" },
]
license = {file = "LICENSE"}
description='bsmplot is a tool to visualize time series'
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
          'wxpython>=4.2.1', 'matplotlib>=3.8.1', 'numpy', 'scipy', 'click>=8.1', 'pandas',
          'pyulog', 'mplpanel>=0.2.4', 'aui2>=0.2.0', 'zmq', 'netCDF4',
          'bsmutility>=0.3.8','ply', 'charset_normalizer', 'h5py', 'packaging'
      ]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "bsmplot.__version__"}

[project.urls]
"Homepage" = "https://github.com/tianzhuqiao/bsmplot"

[project.gui-scripts]
bsmplot = "bsmplot.__main__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
bsmplot = ["ico/*.icns", "ico/*.ico", "ico/*.svg"]

[options]
include_package_data = true
